# buckutt-api

./: .env.example  .gitignore  404.html  README.md  fixtures.json  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml
.github/actions/setup_project/: action.yml
.github/workflows/: test.yml
api/article/api/: index.html
api/article/models/: index.html
api/article/schemas/: index.html
api/selling_points/models/: index.html
api/selling_points/schemas/: index.html
api/transaction/api/: index.html
api/transaction/models/: index.html
api/transaction/schemas/: index.html
api/users/models/: index.html
api/users/schemas/: index.html
article/: admin.py  api.py  models.py  schemas.py
article/migrations/: 0001_initial.py  0002_remove_article_type.py
article/tests/: test_model.py
buckutt/: asgi.py  renderer.py  settings.py  testrunner.py  types.py  urls.py  wsgi.py
buckutt/management/commands/: reset_db.py
docs/: api.md  index.md  install.md  philosophie.md
docs/api/article/: api.md  models.md  schemas.md
docs/api/selling_points/: models.md  schemas.md
docs/api/transaction/: api.md  models.md  schemas.md
docs/api/users/: models.md  schemas.md
install/: index.html
philosophie/: index.html
search/: search_index.json
selling_points/: admin.py  apps.py  models.py  schemas.py
selling_points/migrations/: 0001_initial.py
transaction/: admin.py  api.py  exceptions.py  models.py  schemas.py
transaction/migrations/: 0001_initial.py  0002_initial.py
users/: __init__.py  admin.py  models.py  schemas.py
users/migrations/: 0001_initial.py
